# miasma-protocol

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  RELEASE-NOTES-v0.2.0-beta.1.md  RELEASE-NOTES.md  readme.md  task.md  validate-acl.ps1
.claude/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md
.claude/agents/engineering/: android-runtime-builder.md  backend-architect.md  desktop-i18n-fonts.md  devops-automator.md  frontend-developer.md  installer-release-engineer.md  ios-retrieval-builder.md  mobile-app-builder.md  windows-runtime-operator.md
.claude/agents/product/: android-product-manager.md  ios-product-manager.md  windows-beta-product-manager.md
.claude/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.github/workflows/: ci.yml  remote-peer-proof.yml  wss-port-443-proof.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
crates/miasma-bridge/: Cargo.toml
crates/miasma-bridge/src/: bencode.rs  bridge.rs  index.rs  main.rs  pipeline.rs  torrent.rs
crates/miasma-cli/: Cargo.toml
crates/miasma-cli/src/: main.rs
crates/miasma-core/: Cargo.toml
crates/miasma-core/benches/: crypto_bench.rs
crates/miasma-core/src/: config.rs  cover_traffic.rs  error.rs  lib.rs  pipeline.rs  secure_file.rs  share.rs  store.rs
crates/miasma-core/src/crypto/: aead.rs  hash.rs  keyderive.rs  mod.rs  rs.rs  sss.rs
crates/miasma-core/src/daemon/: http_bridge.rs  ipc.rs  mod.rs  rate_limit.rs  replication.rs  self_heal.rs
crates/miasma-core/src/directed/: challenge.rs  envelope.rs  inbox.rs  mod.rs  protocol.rs
crates/miasma-core/src/dissolution/: distributor.rs  manifest.rs  mod.rs  segment.rs
crates/miasma-core/src/network/: address.rs  admission_policy.rs  bbs_credential.rs  connection_health.rs  coordinator.rs  credential.rs  descriptor.rs  dht.rs  environment.rs  metrics.rs  mod.rs  node.rs  onion_relay.rs  path_selection.rs  peer_state.rs  relay_probe.rs  routing.rs  sybil.rs  types.rs
crates/miasma-core/src/onion/: circuit.rs  executor.rs  mod.rs  packet.rs  router.rs  share.rs
crates/miasma-core/src/repair/: detector.rs  mod.rs  protocol.rs
crates/miasma-core/src/reputation/: bbs_credential.rs  mod.rs  verifier.rs
crates/miasma-core/src/retrieval/: coordinator.rs  dht_source.rs  mod.rs  source.rs  streaming.rs  transport_source.rs
crates/miasma-core/src/transport/: diagnostics.rs  mod.rs  obfuscated.rs  payload.rs  proxy.rs  reality.rs  shadowsocks.rs  tor.rs  websocket.rs
crates/miasma-core/tests/: adversarial_test.rs  integration_test.rs
crates/miasma-desktop/: Cargo.toml  build.rs
crates/miasma-desktop/assets/: icon-32x32.rgba
crates/miasma-desktop/src/: app.rs  locale.rs  main.rs  variant.rs  worker.rs
crates/miasma-ffi/: Cargo.toml  build.rs
crates/miasma-ffi/src/: lib.rs
crates/miasma-wasm/: Cargo.toml
crates/miasma-wasm/src/: lib.rs
crates/miasma-wasm/tests/: compat_test.rs
docs/: TROUBLESHOOTING.md  censorship-resistance-posture.md  connectivity-model.md  platform-roadmap.md  runbook-local-p2p.md  security-audit-android.md  security-audit-web.md  validation-report-0.3.0.md  variant-guide.md  verification-log.md  web-validation-report.md
docs/adr/: 001-transport.md  002-dht-onion-boundary.md  003-share-integrity.md  004-routing-trust-model.md  005-anonymous-trust-descriptors.md  008-transport-strategy.md  009-native-tunnel-decision.md  010-directed-sharing-transport-architecture.md  ADR-006-directed-private-sharing.md  adr-007-web-network-bridge.md
docs/tasks/: android-cross-device-beta-hardening.md  android-mobile-node-foundation.md  android-staged-validation.md  bridge-connectivity-superhardening.md  bridge-connectivity-validation-report.md  bridge-field-testing-and-reconnection-integration.md  bridge-globalprotect-vpn-and-mobile-proof.md  bridge-multi-node-lab-and-hard-blocker-burndown.md  bridge-multi-node-lab-milestone-report.md  bridge-unrestricted-network-and-mobile-proof.md  claude-remote-linux-peer-proof.md  directed-private-sharing-and-connectivity-completion.md  ios-retrieval-client-foundation.md  ios-staged-validation.md  ipc-large-file-directed-send-hardening.md  linux-peer-interoperability-proof.md  linux-remote-bridge-lab-taskpack.md  mobile-cross-device-directed-sharing-validation.md  mobile-directed-sharing-network-path.md  platform-convergence-roadmap.md  productization-gap-assessment-and-estimation.md  reconnect-hardening-and-mobile-tor-followthrough.md  relay-fallback-and-remote-linux-followthrough.md  remaining-tasks-prioritized.md  webapptasks.md  windows-beta-rc-hardening.md  windows-broader-tester-expansion.md  windows-dual-release-variants-milestone.md  windows-second-device-directed-sharing-validation.md  windows-staged-cross-device-validation.md  windowsUXtasks.md  windowsbetareleasetasks.md
docs/validation/: android-device-validation-checklist.md  bridge-connectivity-live-results.md  bridge-connectivity-validation-report.md  enterprise-overlay-validation-report.md  ipc-large-file-directed-send-validation-report.md  linux-peer-interoperability-validation-report.md  mobile-directed-sharing-validation-report.md  reconnect-hardening-and-field-proof-report.md  remote-linux-peer-validation-report.md  windows-second-device-directed-sharing-validation-report.md
installer/: bundle.wxs  license.rtf  miasma.wxs
ios/: Package.swift
scripts/: bridge-validation.ps1  build-android.sh  build-installer.ps1  build-release.ps1  package-release.ps1  sign-release.ps1  smoke-installed.ps1  smoke-loopback.ps1  smoke-loopback.sh  smoke-windows.ps1  soak-test.ps1  validate-bridge-connectivity.ps1  validate-bridge-linux.sh  validate-installer.ps1  wss-probe-windows.ps1
scripts/launchers/: Miasma Technical.cmd  Miasma.cmd
web/: index.html  manifest.json  sw.js
web/css/: style.css
web/js/: app.js  bridge.js  i18n.js  storage.js
web/pkg/: .gitignore  miasma_wasm.d.ts  miasma_wasm.js  miasma_wasm_bg.wasm  miasma_wasm_bg.wasm.d.ts  package.json
(+36 files in other folders)
