[workspace]
members = [
    "crates/miasma-core",
    "crates/miasma-cli",
    "crates/miasma-ffi",
    "crates/miasma-bridge",
    "crates/miasma-desktop",
    "crates/miasma-wasm",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Miasma Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/miasma-protocol/miasma"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
blake3 = "1"
aes-gcm = "0.10"
sharks = "0.5"
reed-solomon-simd = "3"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"

# Networking
libp2p = { version = "0.54", features = [
    "tcp",
    "quic",
    "kad",
    "noise",
    "yamux",
    "relay",
    "identify",
    "ping",
    "autonat",
    "dcutr",
    "mdns",
    "tokio",
    "macros",
    "request-response",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Local store encryption (XChaCha20-Poly1305 — 192-bit nonce, safe for random nonce per file)
chacha20poly1305 = "0.10"
# Onion routing — X25519 ECDH
x25519-dalek = { version = "2", features = ["static_secrets"] }
# Password hashing for directed sharing
argon2 = "0.5"
# DHT record signing — Ed25519
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Config
toml = "0.8"

# Platform-specific data directories (~/.miasma, etc.)
directories = "5"

# Base encoding
bs58 = "0.5"
hex = "0.4"
tempfile = "3"
futures = "0.3"
async-trait = "0.1"
tokio-tungstenite = "0.24"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pemfile = "2"
tokio-socks = "0.5"
quinn = "0.11"
shadowsocks-crypto = { version = "0.6", default-features = false, features = ["v2"] }

# HTTP bridge for web client
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
base64 = "0.22"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
