[package]
name = "miasma-core"
description = "Core cryptographic and networking library for the Miasma Protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
blake3.workspace = true
aes-gcm.workspace = true
sharks.workspace = true
reed-solomon-simd.workspace = true
rand.workspace = true
zeroize.workspace = true
hkdf.workspace = true
sha2.workspace = true
serde.workspace = true
bincode.workspace = true
bs58.workspace = true
hex.workspace = true
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
toml.workspace = true
directories.workspace = true
thiserror.workspace = true
anyhow.workspace = true
libp2p.workspace = true
futures = "0.3"
async-trait = "0.1"
serde_json.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
rustls-pemfile.workspace = true
tokio-socks.workspace = true
quinn.workspace = true
rcgen = "0.13"
subtle = "2"
argon2.workspace = true
bls12_381 = "0.8"
ff = "0.13"
group = "0.13"
hyper.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "crypto_bench"
harness = false
