[package]
name = "miasma-wasm"
description = "Miasma Protocol WebAssembly build — browser-side dissolve/retrieve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
blake3 = "1"
aes-gcm = "0.10"
sharks = "0.5"
reed-solomon-simd = "3"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
bs58 = "0.5"
thiserror = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
blake3 = "1"
bs58 = "0.5"
bincode = "1"
reed-solomon-simd = "3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
